<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#edf3f7">
    <RelativeLayout 
        android:id="@+id/searchtitle"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:background="@drawable/phone_con_send_bg_bg">
	    <Button
		    android:id="@+id/searchbutton"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/phone_search"
	    	android:gravity="center" 
	    	android:textColor="#000000"
	    	android:textSize="16dp"
	    	android:background="@drawable/phone_send_bg"
	    	android:layout_margin="5dp"
	    	android:layout_alignParentRight="true"  />
	    <EditText
			android:id="@+id/search"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="22dp"
			android:textColor="#487EA4"
			android:hint="@string/phone_input_phone_tips_hint"
			android:text=""
			android:singleLine="true"
			android:layout_margin="5dp"
			android:background="@drawable/phone_con_content_bg"
			android:layout_toLeftOf="@id/searchbutton"
			android:gravity="left|center"/>
	</RelativeLayout>
	 <RelativeLayout 
        android:id="@+id/search_all"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/searchtitle"
	    android:paddingTop="5dp"
	    android:gravity="center|right" 
	    android:background="@drawable/phone_select_all_bg">
	     <ImageView
		    android:id="@+id/message_checkall"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="#000000"
	    	android:textSize="16dp"
	    	android:background="@drawable/phone_no_selected"
	    	android:layout_marginLeft="5dp"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginTop="5dp"
	    	android:layout_marginBottom="5dp"
	    	android:layout_alignParentRight="true"  />
	    <TextView
			android:id="@+id/message_checkall_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16dp"
			android:textColor="#000000"
			android:text="@string/phone_select_all"
			android:singleLine="true"
			android:layout_margin="5dp"
			android:layout_toLeftOf="@id/message_checkall"
			android:gravity="left|center"/>
	 </RelativeLayout>
    <LinearLayout
    	android:id="@+id/anniu"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   	android:gravity="center" 
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/phone_con_buttom_bg"
	    android:orientation="horizontal">
		<Button
		    android:id="@+id/submit"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/phone_submit"
	    	android:textSize="16dp"
	    	android:gravity="center" 
	    	android:layout_weight="1"
	    	android:layout_marginLeft="10dp"
		    android:background="@drawable/phone_common_button"/>
		<Button
		    android:id="@+id/cancel"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/phone_cancel"
	    	android:textSize="16dp"
	    	android:gravity="center" 
	    	android:layout_weight="1"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginRight="10dp"
		    android:background="@drawable/phone_common_button"/>
	</LinearLayout>
	<LinearLayout
    	android:id="@+id/title_content3"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_above="@id/anniu"
		android:layout_below="@id/search_all">
		<ListView
			android:id="@+id/content_address_list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:cacheColorHint="#00000000"
			android:divider="@drawable/phone_list_base_line"
			android:dividerHeight="1dp"
			android:textSize="18sp" />
	</LinearLayout>
</RelativeLayout>